<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android"
            android:layout_gravity="center"
            android:scaleType="center"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_user"
                    android:id="@+id/user"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_password"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/login_button"
                    android:onClick="handleClickAction"
                    android:id="@+id/loginButton"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>
